# docs/swagger.json
@@ -49,42 +49,6 @@
                 }
             }
         },
-        "/auth/goods/": {
-            "post": {
-                "security": [
-                    {
-                        "Token": []
-                    }
-                ],
-                "description": "添加",
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "Project"
-                ],
-                "summary": "添加",
-                "parameters": [
-                    {
-                        "description": "reqBody",
-                        "name": "form",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "$ref": "#/definitions/request.Goods"
-                        }
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "{\"code\":200,\"data\":{},\"msg\":\"ok\"}",
-                        "schema": {
-                            "type": "string"
-                        }
-                    }
-                }
-            }
-        },
         "/auth/order/buy": {
             "post": {
                 "security": [
@@ -144,6 +108,37 @@
                         "required": true,
                         "schema": {
                             "$ref": "#/definitions/v1.UserAddressForm"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "{\"code\":200,\"data\":{},\"msg\":\"ok\"}",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                }
+            }
+        },
+        "/goods/": {
+            "post": {
+                "description": "添加",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Project"
+                ],
+                "summary": "添加",
+                "parameters": [
+                    {
+                        "description": "reqBody",
+                        "name": "form",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/request.Goods"
                         }
                     }
                 ],
